--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,5 +1,7 @@
 public net.minecraft.world.entity.vehicle.Boat f_38281_ # lastYd
 public net.minecraft.world.entity.vehicle.Boat f_38279_ # status
 
+public net.minecraft.client.gui.Gui m_168675_(F)V
+
 public-f net.minecraft.world.item.AxeItem f_150683_ # STRIPPABLES
 public net.minecraft.world.level.block.FireBlock m_53444_(Lnet/minecraft/world/level/block/Block;II)V # setFlammable
